--- a/comply_advantage/Dockerfile
+++ b/comply_advantage/Dockerfile
@@ -27,6 +27,7 @@ COPY main.py /src
 COPY coverage /src
 COPY app /src/app
 COPY e2e /src/e2e
+COPY mock_data /src/mock_data
 
 # Ports.
 EXPOSE 8001
