--- a/onfido/Pipfile
+++ b/onfido/Pipfile
@@ -15,7 +15,7 @@ simplejson = "*"
 sqlalchemy = "*"
 pprint = "*"
 pipetools = "*"
-responses = "*"
+responses = "==0.9.0"
 python-json-logger = "*"
 coverage = "*"
 codecov = "*"
