--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,11 @@ aliases:
         - run: |
             docker run --name unit_$INTEGRATION eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION yarn run unit
             docker cp unit_$INTEGRATION:/tmp/coverage_unit workspace/coverage_unit_$INTEGRATION
+        - run: |
+            rm Pipfile Pipfile.lock
+            pipenv install coverage codecov
+        - run: pipenv run coverage xml -i --include=/tmp/coverage_unit
+        - run: pipenv run codecov -cF complyadvantage -X search -f coverage.xml
         - persist_to_workspace:
             root: workspace
             paths:
@@ -95,6 +100,11 @@ aliases:
             eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION \
             yarn run coverage
             docker cp e2e_$INTEGRATION:/tmp/coverage_e2e workspace/coverage_e2e_$INTEGRATION
+        - run: |
+            rm Pipfile Pipfile.lock
+            pipenv install coverage codecov
+        - run: pipenv run coverage xml -i --include=/tmp/coverage_e2e
+        - run: pipenv run codecov -cF complyadvantage -X search -f coverage.xml
         - persist_to_workspace:
             root: workspace
             paths:
@@ -277,19 +287,17 @@ jobs:
         steps:
           - checkout
           - run:
-            name: Setup
-            command: |
-              rm Pipfile Pipfile.lock
+              name: Setup
+              command: |
+                  rm Pipfile Pipfile.lock
           - run: pipenv install coverage codecov
           - attach_workspace:
               at: coverage
           - run: pipenv run coverage combine coverage/coverage_unit_comply_advantage coverage/coverage_e2e_comply_advantage
-          - run: pipenv run codecov
-          - run: pipenv run coverage html --omit="python/tests/*"
+          - run: pipenv run coverage xml -i
+          - run: pipenv run codecov -cF complyadvantage -X search -f coverage.xml
           - store_artifacts:
               path: coverage.xml
-          - store_artifacts:
-              path: htmlcov
 workflows:
     version: 2
 
