Add e2e and unittest flags

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,21 @@
 codecov:
   archive:
     uploads: false
+
+  flags:
+    # filter the folder(s) you wish to measure by that flag
+    bvd:
+      paths:
+        - bvd/
+    comply_advantage:
+      paths:
+        - comply_advantage/
+    duedil:
+      paths:
+        - duedil/
+    onfido:
+      paths:
+        - onfido/
+    worldcheck:
+      paths:
+        - worldcheck/
