--- a/comply_advantage/Dockerfile
+++ b/comply_advantage/Dockerfile
@@ -29,6 +29,7 @@ COPY coverage /src
 COPY app /src/app
 COPY e2e /src/e2e
 COPY mock_data /src/mock_data
+COPY test_data /src/test_data
 
 # Ports.
 EXPOSE 8001
