--- a/worldcheck/deployment.yaml
+++ b/worldcheck/deployment.yaml
@@ -51,7 +51,7 @@ metadata:
   name: integrations-worldcheck
 spec:
   ports:
-    -
+    - name: http
       port: 8001
   selector:
     passfort: integrations-worldcheck
