--- a/bvd/deployment.yaml
+++ b/bvd/deployment.yaml
@@ -45,7 +45,7 @@ metadata:
   name: integrations-bvd
 spec:
   ports:
-    -
+    - name: http
       port: 8001
   selector:
     passfort: integrations-bvd
