--- a/onfido/deployment.yaml
+++ b/onfido/deployment.yaml
@@ -45,7 +45,7 @@ metadata:
   name: integrations-onfido
 spec:
   ports:
-    -
+    - name: http
       port: 8001
   selector:
     passfort: integrations-onfido
