--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,7 @@ aliases:
           - *auth_ssh
           - *setup_gcp
           - run: |
+              sudo pip install pipenv==2018.5.18
               pipenv --three
               pipenv install
               pipenv run python deploy.py -ds `cat workspace/integration_name` staging
@@ -114,6 +115,7 @@ aliases:
           - *auth_ssh
           - *setup_gcp
           - run: |
+              sudo pip install pipenv==2018.5.18
               pipenv --three
               pipenv install
               pipenv run python deploy.py -ds `cat workspace/integration_name` production
