Actually add coverage for unit tests

--- a/equifax/package.json
+++ b/equifax/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "license": "Private",
   "scripts": {
-    "unit": "pipenv run python -m unittest discover .",
+    "unit": "./unit_coverage",
     "e2e": "pipenv run python -m unittest e2e.e2e",
     "coverage": "./coverage"
   }
