--- a/duedil/Pipfile
+++ b/duedil/Pipfile
@@ -11,9 +11,9 @@ gunicorn = "==19.5.0"
 flask = "==0.12.1"
 requests = "*"
 pycountry = "*"
-passfort-data-structure = {git = "git@github.com:PassFort/python-data-structure.git@a305cc9749909e4258c28f60d9247dce43a91ebe", editable = true}
-schemad-types = { git = "git@github.com:PassFort/python-schemad-types.git@a1e93f811b764da64a61c8515e729d2527fe9660", editable = true }
-dassert = { git = "git@github.com:PassFort/python-dassert.git@48233ad93ba806671376526bb25586100bcc0c5a", editable = true }
+passfort-data-structure = {git = "ssh://git@github.com/PassFort/python-data-structure.git", ref = "ed4bc3ee9abacba852ed627ef4e83ad96b645253", editable = true}
+schemad-types = { git = "ssh://git@github.com/PassFort/python-schemad-types.git", ref = "a1e93f811b764da64a61c8515e729d2527fe9660", editable = true }
+dassert = { git = "ssh://git@github.com/PassFort/python-dassert.git", ref = "48233ad93ba806671376526bb25586100bcc0c5a", editable = true }
 sqlalchemy = "*"
 raven = {extras = ["flask"]}
 responses = "*"
