--- a/vsure/package.json
+++ b/vsure/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "license": "Private",
   "scripts": {
-    "unit": "./unit_coverage",
+    "unit": "pipenv run python -m unittest discover .",
     "e2e": "pipenv run python -m unittest e2e.e2e",
     "coverage": "./coverage"
   }
