--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,6 +199,17 @@ jobs:
                 paths:
                     - integration_name
 
+    set_integration_trulioo:
+        docker:
+            - image: circleci/python
+        steps:
+            - run: mkdir -p workspace
+            - run: echo trulioo > workspace/integration_name
+            - persist_to_workspace:
+                root: workspace
+                paths:
+                    - integration_name
+
     build_comply_advantage:
         <<: *build
 
@@ -218,6 +229,9 @@ jobs:
         <<: *build
 
     build_worldcheck:
+        <<: *build
+
+    build_trulioo:
         <<: *build
 
     lint:
@@ -253,6 +267,9 @@ jobs:
     unit_worldcheck:
         <<: *unit
 
+    unit_trulioo:
+        <<: *unit
+
     e2e_comply_advantage:
       <<: *e2e
 
@@ -272,6 +289,9 @@ jobs:
         <<: *e2e
 
     e2e_worldcheck:
+        <<: *e2e
+
+    e2e_trulioo:
         <<: *e2e
 
     deploy_comply_advantage_staging:
@@ -295,6 +315,9 @@ jobs:
     deploy_worldcheck_staging:
         <<: *deploy_staging_common
 
+    deploy_trulioo_staging:
+        <<: *deploy_staging_common
+
     deploy_comply_advantage_production:
       <<: *deploy_production_common
 
@@ -314,6 +337,9 @@ jobs:
         <<: *deploy_production_common
 
     deploy_worldcheck_production:
+        <<: *deploy_production_common
+
+    deploy_trulioo_production:
         <<: *deploy_production_common
 
 workflows:
@@ -516,6 +542,35 @@ workflows:
                 requires:
                   - e2e_worldcheck
                   - unit_worldcheck
+                filters:
+                    branches:
+                        only:
+                          - master
+
+    trulioo:
+        jobs:
+            - set_integration_trulioo
+            - build_trulioo:
+                requires:
+                  - set_integration_trulioo
+            - unit_trulioo:
+                requires:
+                  - build_trulioo
+            - e2e_trulioo:
+                requires:
+                  - build_trulioo
+            - deploy_trulioo_staging:
+                requires:
+                  - e2e_trulioo
+                  - unit_trulioo
+                filters:
+                    branches:
+                        only:
+                          - staging
+            - deploy_trulioo_production:
+                requires:
+                  - e2e_trulioo
+                  - unit_trulioo
                 filters:
                     branches:
                         only:
