--- a/trulioo/Dockerfile
+++ b/trulioo/Dockerfile
@@ -2,9 +2,7 @@ FROM python:3.7.4-alpine3.10
 
 ENV LANG=en_US.UTF-8 \
     LANGUAGE=en_US:en \
-    LC_ALL=en_US.UTF-8 \
-    # This disables the ~/.ssh/known_hosts file
-    GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
+    LC_ALL=en_US.UTF-8
 
 EXPOSE 8001
 
@@ -16,12 +14,10 @@ COPY Pipfile Pipfile.lock package.json yarn.lock /app/
 ENV FLASK_APP="app"
 
 RUN pip install pipenv \
-    && pipenv sync \
+    && pipenv install \
     && yarn \
     && apk del --no-cache git openssh-client
 
 COPY . /app
 
-ENTRYPOINT [ "pipenv", "run"]
-
-CMD ["gunicorn","-w","1","-t","120","-b","0.0.0.0:8001","--log-level","info","--access-logfile","-","--access-logformat='%(h)s','%(t)s','%(r)s','%(s)s","--enable-stdio-inheritance","wsgi:app"]
+CMD pipenv run gunicorn -w 4 -t 120 -b 0.0.0.0:8001 --log-level info --access-logfile - --access-logformat="%(h)s %(t)s %(r)s %(s)s" --enable-stdio-inheritance main:app
