--- a/trulioo/Dockerfile
+++ b/trulioo/Dockerfile
@@ -20,4 +20,4 @@ RUN pip install pipenv \
 
 COPY . /app
 
-CMD pipenv run gunicorn -w 4 -t 120 -b 0.0.0.0:8001 --log-level info --access-logfile - --access-logformat="%(h)s %(t)s %(r)s %(s)s" --enable-stdio-inheritance wsgi:app
+CMD pipenv run gunicorn -w 4 -t 120 -b 0.0.0.0:8001 --log-level info --access-logfile - --access-logformat="%(h)s %(t)s %(r)s %(s)s" --enable-stdio-inheritance main:app
