Add e2e tests to circleci for iovation

--- a/iovation/package.json
+++ b/iovation/package.json
@@ -2,6 +2,8 @@
   "private": true,
   "license": "Private",
   "scripts": {
-    "unit": "./unit_coverage"
+    "unit": "./unit_coverage",
+    "e2e": "pipenv run python -m unittest e2e.e2e",
+    "coverage": "./coverage"
   }
 }
