--- a/iovation/Dockerfile
+++ b/iovation/Dockerfile
@@ -22,5 +22,6 @@ COPY unit_coverage /src
 COPY app /src/app
 COPY demo_data /src/demo_data
 COPY e2e /src/e2e
+COPY coverage /src
 
 CMD pipenv run gunicorn -w 4 -t 120 -b 0.0.0.0:8001 --log-level info --access-logfile - --access-logformat="%(h)s %(t)s %(r)s %(s)s" --enable-stdio-inheritance main:app
