add passfort types, cifas types, and cifas api client

--- a/cifas/deployment.yaml
+++ b/cifas/deployment.yaml
@@ -32,6 +32,13 @@ spec:
           value: {cluster}
         - name: SENTRY_URL
           value: {sentry_url}
+        - name: SENTRY_URL
+          value: {sentry_url}
+        - name: HTTPS_PROXY
+          valueFrom:
+            secretKeyRef:
+              name: webhooks
+              key: proxy_url
         readinessProbe:
           httpGet:
             path: '/health'
