--- a/cifas/Pipfile
+++ b/cifas/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 flask = "*"
 raven = {extras = ["flask"]}
 requests = "*"
+responses = "*"
 gunicorn = "*"
 coverage = "*"
 codecov = "*"
