Use Make instead of Yarn as task runner
Since we leave the task runner binary in the container when we deploy
it, we should probably try not to include the entire JS ecosystem that
Yarn pulls in when you install it.

This commit switches us to Make, which while slightly less platform
independent, is literally 20x smaller.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ aliases:
             -e VCS_COMMIT_ID=$CIRCLE_SHA1 \
             -e VCS_BRANCH_NAME=$CIRCLE_BRANCH \
             -e CI_BUILD_ID=$CIRCLE_BUILD_NUM \
-            eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION yarn run unit
+            eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION make unit
 
     - &e2e
       docker:
@@ -90,7 +90,7 @@ aliases:
             -e VCS_BRANCH_NAME=$CIRCLE_BRANCH \
             -e CI_BUILD_ID=$CIRCLE_BUILD_NUM \
             eu.gcr.io/core-gearbox-112418/integrations-$INTEGRATION:$VERSION \
-            yarn run coverage
+            make coverage
 
     - &deploy_staging_common
       docker:
