--- a/worldcheck/Dockerfile
+++ b/worldcheck/Dockerfile
@@ -10,7 +10,7 @@ ENV LANG=en_US.UTF-8 \
 
 WORKDIR /src
 
-COPY Pipfile Pipfile.lock package.json yarn.lock /src/
+COPY Pipfile Pipfile.lock Makefile /src/
 
 RUN env
 
@@ -19,13 +19,12 @@ RUN mkdir /srv/logs/ && \
     mkdir -p ~/.ssh  && \
     echo "$git_key" > ~/.ssh/id_rsa && \
     chmod 600 ~/.ssh/id_rsa && \
-    apk add --no-cache yarn openssh-client git
+    apk add --no-cache make openssh-client git
 
 RUN pipenv run pip install --upgrade wheel
 RUN ["pipenv", "install"]
 
-RUN yarn && \
-    apk del --no-cache git openssh-client
+RUN apk del --no-cache git openssh-client
 
 COPY main.py /src
 COPY coverage /src
