--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,6 +203,7 @@ jobs:
       - auth_ssh
       - setup_gcp
       - run: |
+          sudo apt-get update
           sudo apt-get install -y gettext-base
           cat << parameters.package >>/env_variables.yaml.envsubst | envsubst > << parameters.package >>/env_variables.yaml
           gcloud app deploy
