--- a/cifas/Pipfile
+++ b/cifas/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [packages]
 flask = "*"
 raven = {extras = ["flask"]}
-requests = "*"
+requests = { extras = ['socks'] }
 responses = "*"
 gunicorn = "*"
 coverage = "*"
