Cleanup LexisNexis integration + prepare for deployment
The following changes were made:
 * Reformatted code
 * Fixed typos
 * Added Sentry
 * Restructure Dockerfile to closer match other integrations
 * Add coverage/Makefile
 * Remove socks proxy custom env vars and use standard ones per Cifas
 * Added k8s resources
 * Rename wsgi.py -> main.py per structure of other integrations
 * Add LexisNexis InstantID to CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,9 @@ parameters:
   reference_integration:
     type: boolean
     default: false
+  lexisnexis_id:
+    type: boolean
+    default: false
 
 executors:
   python-builder:
@@ -720,3 +723,35 @@ workflows:
               branches:
                 only:
                   - staging
+
+  lexisnexis_id:
+    when: << pipeline.parameters.lexisnexis_id >>
+    jobs:
+      - build:
+          name: build_lexisnexis_id
+          package: lexisnexis_id
+      - unit:
+          name: unit_lexisnexis_id
+          package: lexisnexis_id
+          requires:
+            - build_lexisnexis_id
+      - deploy_common:
+          name: deploy_lexisnexis_id_staging
+          package: lexisnexis_id
+          to: staging
+          requires:
+            - unit_lexisnexis_id
+          filters:
+              branches:
+                only:
+                  - staging
+      - deploy_common:
+          name: deploy_lexisnexis_id_production
+          package: lexisnexis_id
+          to: production
+          requires:
+            - unit_lexisnexis_id
+          filters:
+              branches:
+                  only:
+                    - master
