--- a/lexisnexis_id/Pipfile
+++ b/lexisnexis_id/Pipfile
@@ -5,13 +5,16 @@ verify_ssl = true
 
 [dev-packages]
 pytest = "*"
+coverage = "*"
+codecov = "*"
 
 [packages]
 flask = "*"
 flask-restful = "*"
 gunicorn = "*"
-requests = "*"
+requests = {extras = ['socks']}
 pysocks = "*"
+sentry-sdk = {extras = ["flask"], version = "==0.14.0"}
 
 [requires]
 python_version = "3.7"
